--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-requests~=2.27.1
+requests>=2.27.1
 torch>=1.11.0
 Pillow>=9.0.1
 typing~=3.7.4.3
@@ -7,7 +7,7 @@ opencv-python>=4.5.5.64
 numpy~=1.22.4
 loguru~=0.6.0
 uvicorn~=0.17.6
-fastapi~=0.78.0
+fastapi>=0.78.0
 starlette~=0.19.1
 pydantic>=1.9.1
 click~=8.1.3
